--- a/Dockerfile.2048
+++ b/Dockerfile.2048
@@ -1,34 +1,24 @@
 # hadolint ignore=DL3007
-FROM public.ecr.aws/l6m2t8p7/docker-2048:latest AS source
+# Stage 1: Builder (not strictly necessary for static files, but shows the concept)
+FROM node:20-alpine AS builder
 
-# Stage 2: Create a clean, secure image using nginxinc/nginx-unprivileged
-# Fixes DL3007 (Pin version) and CIS-DI-0001 (Non-root user)
-FROM nginxinc/nginx-unprivileged:1.25-alpine
+WORKDIR /app
+COPY index.html .
 
-USER root
+# Stage 2: Runner
+# Use a minimal, security-oriented base image like Nginx-alpine
+FROM nginx:alpine
 
-# Copy static files from upstream
-# The unprivileged image serves from /usr/share/nginx/html by default
-COPY --from=source /usr/share/nginx/html /usr/share/nginx/html
+# Copy the built assets from the builder stage to the Nginx serving directory
+COPY --from=builder /app/index.html /usr/share/nginx/html/index.html
 
-# Expose port 8080 (default for unprivileged nginx)
-EXPOSE 8080
+# Security Best Practice: Run as a non-root user
+# Nginx-alpine typically sets up an 'nginx' user automatically.
+# The default 'nginx' user in the official alpine image already runs as non-root
+# if you are only serving static files.
 
-# Configure Nginx to run as non-root (Port 8080) to satisfy CIS-DI-0001
-RUN sed -i 's/listen  *80;/listen 8080;/' /etc/nginx/conf.d/default.conf && \
-    sed -i 's/listen  *\[::\]:80;/listen [::]:8080;/' /etc/nginx/conf.d/default.conf && \
-    # Fix permissions for non-root user
-    chown -R nginx:nginx /var/cache/nginx /var/log/nginx /etc/nginx/conf.d /usr/share/nginx/html && \
-    touch /var/run/nginx.pid && \
-    chown -R nginx:nginx /var/run/nginx.pid
+# Expose port 80 for the web traffic
+EXPOSE 80
 
-# Fix CIS-DI-0006: Add HEALTHCHECK instruction
-HEALTHCHECK --interval=30s --timeout=5s \
-  CMD wget -q --spider http://localhost:8080/ || exit 1
-
-# Switch to non-root user
-USER nginx
-
-EXPOSE 8080
-
+# Command to run Nginx (default in Nginx images)
 CMD ["nginx", "-g", "daemon off;"]
